--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   gitHubActionForPytest:
     name: GitHub Action for pytest
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
     - name: GitHub Action for pytest
